Closed Bug 114112 Opened 24 years ago Closed 24 years ago

When indenting text contained in two separate table cells, a <BR> is added for each blockquote tag.

Categories

(Core :: DOM: Editor, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: TucsonTester1, Assigned: mozeditor)

Details

(Whiteboard: EDITORBASE+; FIXINHAND; need a=)

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:0.9.6+) Gecko/20011206 Netscape6/6.1b1 BuildID: 2001120303 If text in multiple table cells is selected and then indented, each time the blockquote tag is added, an additional <BR> tag is added too. Reproducible: Always Steps to Reproduce: 1. Launch Composer rev. 2001120303 2. Create a new table with 1 column and 4 rows 3. Enter text into each cell then CTRL+click to select each cell 4. Click repeatedly on the INDENT button on the toolbar Actual Results: All of the text will be placed in the bottom-most cell and then everytime the indent button is clicked, the text will indent but the cell will get longer as a <BR> tag is added each time the blockquote tag gets added. If the OUTDENT button is then used to try and undo this, the blockquote tags get removed correctly but all of the extra <BR> tags remain. From here, if you place the cursor at the bottom of the cell and start typing, the text will actually be entered one character on top of the other until it gets up to a line that has text already on it. Expected Results: The text should stay in its respective cells and the INDENT button shouldn't add additional linebreaks. I realize that the bug describing the text all going into the same cell has been reported, but I couldn't find reports of the subsequent behavior so here it is :) Regarding the steps to reproduce, it seems that if each table cell is select via CTRL+A or Table>Select>Table and then the indent is applied, a rather different bug is revealed. In this case, the table will shrink inward from the left and right edges each time the indent button is clicked until it can't shrink anymore and then will start indenting the whole table. Also, if the cells are selected and then the indent is added via Format>Paragraph>Blockquote a third bug is seen. What happens here is that the table completely dissapears and each line of text is spaced out about 10 lines apart. Most of the html for the table remains although the <TD> tags are gone. Let me know if I should report these separately.
wheee!
Assignee: syd → jfrancis
Component: Editor: Composer → Editor: Core
Summary: When indenting text contained in two separate table cells, a <BR> is added for each blockquote tag. → When indenting text contained in two separate table cells, a <BR> is added for each blockquote tag.
Whiteboard: EDITORBASE
This is pretty low priority. Most users dont even know about cell selection mode. However, playing with this I find a more important bug: just select across the first three cells (normally) and indent. The text from first three cells all go into third cell.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → mozilla0.9.8
Priority: -- → P2
Target Milestone: mozilla0.9.8 → mozilla1.0.1
apparent in mac os x build 2001121805. changing platform/os to all.
OS: Windows 98 → All
Hardware: PC → All
seems like users might run into this, plussing
Whiteboard: EDITORBASE → EDITORBASE+
Keywords: nsbeta1+
Bulk moving all nsbeta1+ bugs which were targetted after Mozilla1.0 to Mozilla1.0
Target Milestone: mozilla1.0.1 → mozilla1.0
pri = 2 for original 1.0 EB+ bugs
Simple fix. When tossing nodes into blockquotes, we check to see if we have crossed a table element boundary. If we have, we make a new blockquote.
Whiteboard: EDITORBASE+ → EDITORBASE+; FIXINHAND; need r=,sr=,a=
Comment on attachment 74663 [details] [diff] [review] patch to nsHTMLEditRules.cpp sr=kin@netscape.com + PRBool bInDifTblElems; + res = InDifferentTableElements(curQuote, curNode, &bInDifTblElems); Do we need a comment that explains why InDifferentTableElements() is ok to call with elements that might not be in tables at all? Do we need to check the return val of res or init bInDifTblElems?
Attachment #74663 - Flags: superreview+
Comment on attachment 74663 [details] [diff] [review] patch to nsHTMLEditRules.cpp Call me paranoid, but you should check the return value of InDifferentTableElements(), check the return value of calls to GetParentNode() in InDifferentTableElements() and initialize *aResult there too. r=glazman with that
Attachment #74663 - Flags: review+
Whiteboard: EDITORBASE+; FIXINHAND; need r=,sr=,a= → EDITORBASE+; FIXINHAND; need a=
Comment on attachment 74663 [details] [diff] [review] patch to nsHTMLEditRules.cpp a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #74663 - Flags: approval+
fixed on trunk
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
VERIFIED on Win 98 using 03-22 trunk build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: