fix for Bug 114112:  indenting across separate table cells hosed. r=glazman; sr=kin; a=asa